<resources>
    <string name="app_name">HexaDeciBinary Game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HexaDeciBinary Game</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start</string>
    <string name="stats_button">Stats</string>
    <string name="tutorial_button">Tutorial</string>
    <string name="game_button">Game</string>
    <string name="time_game_button">Timed Game</string>
    <string name="Coop_button">Coop Game</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="conversion_button_decimal">Decimal</string>
    <string name="conversion_button_binary">Binary</string>
    <string name="conversion_button_hex">Hexadecimal</string>
    <string name="conversion_button_enter">Enter</string>
    <string name="calc_view_button">Calculator</string>


    <string name="total_time_played">Total Time Played:</string>

    <string name="quiz">Quiz</string>
    <string name="accuracy">Accuracy:</string>
    <string name="endless">Endless</string>
    <string name="longest_streak">Longest Streak:</string>
    <string name="timed">Timed</string>
    <string name="best_game">Best Game</string>
    <string name="fastest_best_game">Fastest Best Game</string>
    <string name="time">Time:</string>
    <string name="score">Score:</string>
    <string name="survivor">Survivor</string>
    <string name="total_time_played_string_playtime">Total Time Played: @string/playtime</string>

    <string name="endless_button">Endless Game</string>
    <string name="survivor_button">Survivor Game</string>

</resources>
