<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity">


    <TextView
        android:id="@+id/total_time_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="33dp"
        android:text="@string/total_time_played"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="86dp"
        android:text="@string/quiz"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Quiz_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="111dp"
        android:text="@string/accuracy"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="138dp"
        android:text="@string/endless"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Endless_streak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="163dp"
        android:text="@string/longest_streak"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="196dp"
        android:text="@string/timed"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="221dp"
        android:text="@string/best_game"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Timed_Best_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="241dp"
        android:text="@string/score"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/Timed_Best_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="260dp"
        android:text="@string/time"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="280dp"
        android:text="@string/fastest_best_game"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Timed_Fastest_Best_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="300dp"
        android:text="@string/score"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/Timed_Fastest_Best_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="319dp"
        android:text="@string/time"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="349dp"
        android:text="@string/survivor"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Survivor_streak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="373dp"
        android:text="@string/longest_streak"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />


    <TextView
        android:id="@+id/totalplaytime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="-9dp"
        android:layout_toEndOf="@+id/total_time_played"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />


    <TextView
        android:id="@+id/quizaccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="112dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/endlessstreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="163dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/timedbestgamescore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="241dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/timedbestgametime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="260dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/timedfastestbestscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="300dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/timedfastestbesttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="319dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/survivorlongeststreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="373dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="41dp" />
</RelativeLayout>